<resources>
    <string name="app_name">pj1card</string>
    <string name="hex"> <u>6e6f7420796574 </u></string>
    <string name="hex2"><u>6e6f7768657265</u></string>
    <string name="virtual_experience_demo">Virtual experience demonstrator available non-stop at:</string>
    <string name="directive">*compliant with Equal opportunity for simultaneous equivocal requests by random allocation AI Directive</string>
    <string name="title">City Copter TAXI</string>
    <string name="register_with">Register with our\n AI representative*\n  at\n Blockchain\n  social appendix:</string>
</resources>
